--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div id="container">
+    <page>
+       this is the main container element 
+    </page>
+  </div>
 </body>
 
 </html>
