--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<div id="container">
-    <page>
-       this is the main container element 
-    </page>
+	<div id = "container">
+    This is the main container element 
+     
+  
   </div>
 </body>
 
